# hwloc

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile.am  NEWS  VERSION  configure.ac  download-and-install.sh
config/: hwloc.m4  hwloc_internal.m4  netloc.m4
doc/: Makefile.am  doxygen.cfg
hwloc/: Makefile.am  pciids-lookup.c  topology-x86.c  topology-xen.c
include/: Makefile.am  hwloc.h  netloc.h  netlocscotch.h
include/hwloc/: plugins.h  rename.h
include/hwloc/autogen/: config.h.in
include/private/: internal-components.h  misc.h  netloc-utils.h  netloc-xml.h  netloc.h  private.h
include/private/utils/: cleaner.h  netloc.h  xml.h
include/utils/: utarray.h  uthash.h
netloc/: Makefile.am  architecture.c  cleaner.c  datatype.c  datatypes.c  edge.c  hwloc.c  libxml.c  load.c  machine.c  network_explicit.c  node.c  nolibxml.c  partition.c  path.c  physical_link.c  restriction.c  scotch.c  support.c  topology.c  xml.c
netloc/export/: Makefile.am  scotch.c
netloc/hardware/: ib.c  network.c
netloc/topos/: Makefile.am
netloc/topos/explicit/: Makefile.am  edge.c  network_explicit.c  node.c  physical_link.c
netloc/xml/: Makefile.am  read.c  save.c
src/: Makefile.am  topology-aix.c  topology-bgq.c  topology-cuda.c  topology-darwin.c  topology-freebsd.c  topology-hpux.c  topology-linux.c  topology-netbsd.c  topology-noos.c  topology-osf.c  topology-solaris.c  topology-synthetic.c  topology-windows.c  topology-x86.c  topology-xen.c  topology-xml.c  topology.c  traversal.c
tests/hwloc/x86/: AMD-15h-Bulldozer-4xOpteron-6272.output  AMD-K10-Istanbul-8xOpteron-8439SE.output  AMD-K10-MagnyCours-2xOpteron-6164HE.output  AMD-K8-SantaRosa-2xOpteron-2218.output  AMD-K8-SledgeHammer-2xOpteron-250.output  Intel-Core-2xXeon-E5345.output  Intel-Haswell-2xXeon-E5-2680v3.output  Intel-IvyBridge-12xXeon-E5-4620v2.output  Intel-Nehalem-2xXeon-X5550.output  Intel-Penryn-4xXeon-X7460.output  Intel-SandyBridge-2xXeon-E5-2650.output  Intel-Westmere-2xXeon-X5650.output
tests/netloc/data/: avakas.txz  plafrim.txz  plafrim2.txz  scotch.txz  tests_draw.txt  tests_extract.txt  tests_mpiscotch.txt  tests_scotch.txt
tests/ports/: Makefile.am
tests/ports/include/cuda/: cuda_runtime_api.h
tests/ports/include/xen/: xenctrl.h
utils/: Makefile.am  lstopo-draw.c  lstopo.c
utils/lstopo/: Makefile.am  lstopo-draw.c  lstopo.c
utils/netloc/: Makefile.am
utils/netloc/draw/: Makefile.am  netloc_draw_to_json.c
utils/netloc/export/: Makefile.am
utils/netloc/export/draw/: Makefile.am  netloc_draw_to_json.c
utils/netloc/export/scotch/: Makefile.am  netloc_scotch_export_arch.c
utils/netloc/export/xml/: Makefile.am  netloc_xml_export.c  netloc_xml_write.c
utils/netloc/hardware/: Makefile.am
utils/netloc/hardware/cray/: Makefile.am  netloc_cray_discover_topo.c  netloc_cray_find_hosts.c
utils/netloc/hardware/explicit/: Makefile.am  netloc_explicit_find_hosts.c
utils/netloc/hardware/infiniband/: Makefile.am  netloc_ib_extract_dats.c
utils/netloc/hardware/opa/: Makefile.am  netloc_opa_gather_raw.sh  netloc_opa_parse_snapshot.py  netloc_opa_parse_topology.py
utils/netloc/infiniband/: Makefile.am  netloc_ib_extract_dats.c
utils/netloc/mapping/: Makefile.am
utils/netloc/topology/: Makefile.am  architecture.c  netloc_get_coords.c  tree.c  tree.h  utils_to_netloc.c
utils/netloc/topology/explicit/: Makefile.am  netloc_topo_explicit.c  netloc_topo_utils_to_netloc.c
utils/netloc/topology/tree/: Makefile.am  netloc_topo_tree.c
utils/netloc/utils/: Makefile.am
utils/netloc/utils/xml/: Makefile.am  netloc_libxml_write.c  netloc_xml_write.c  utils_xml_write.c
utils/netloc/xml/: Makefile.am  netloc_libxml_write.c  netloc_nolibxml_write.c  netloc_xml_write.c
